# inferencer-cpp

./: .env  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.yaml
poc-specific/business_logic/: ClientAPI.py  Dockerfile  ObjectCounter.py  Order.py  OrderManager.py  QueueFeeder.py  RedisHandler.py  SharedQueue.py  entrypoint.sh  main.py  requirements.txt
poc-specific/order_api/: .dockerignore  Dockerfile  app.py  objects.txt
poc-specific/order_api/static/: script.js  style.css
poc-specific/order_api/templates/: index.html
scripts/: build.sh  install.sh  run.sh
src/: Inferencer.cpp  Inferencer.hpp  MyTimer.cpp  MyTimer.hpp  ONNXInferencer.cpp  ONNXInferencer.hpp  ObjectDetectionDrawer.cpp  ObjectDetectionDrawer.hpp  Redis.cpp  Redis.hpp  Worker.cpp  Worker.hpp  globals.cpp  globals.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
tools/: add_nms.py
